--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <input id="hueSlider" type="range" class="fullwidth" onmousedown="startChangingColor(this)" onmouseup="stopChangingColor(this)" onchange="changeColor(this.value)" max="360" value="356" min="0"/>
                     </div><br>
                     <input id="homo" onchange="homomode()" type="checkbox" style="margin-left: 8px;">
-                    <label for="homo">I am a homosexual</label>
+                    <label for="homo">Chroma Theme</label>
                     <input id="alwaysOnTop" onchange="jellyfish.setTopmost(this.checked)" type="checkbox" style="margin-left: 8px;">
                     <label for="alwaysOnTop">Stay on top?</label>
                     <input type="text" class="textbox" placeholder="Theme Repo" value="jellyfish-lsef/jellyfish-ui" id="theme"></input> <button class="simpleButton" onclick="jellyfish.setTheme(document.querySelector('input#theme').value)">Set Theme</button>
