--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <script>
                         document.querySelector("#calamariOptions").style.display = jellyfish.platform != "darwin" ? "none" : "block"
                     </script>
-                    <div class="attribution"><hr>made by <a target="_blank" class="link" href="https://thelmgn.com">theLMGN</a> in 2020.<br>check <a target="_blank" class="link" href="https://jellyfish.thelmgn.com/">https://jellyfish.thelmgn.com/</a> for updates and support<br>Not-gay Chroma Theme made by J_minding
+                    <div class="attribution"><hr>made by <a target="_blank" class="link" href="https://thelmgn.com">theLMGN</a> in 2020.<br>check <a target="_blank" class="link" href="https://jellyfish.thelmgn.com/">https://jellyfish.thelmgn.com/</a> for updates and support<br>Not-gay Chroma Theme made by <a target="_blank" class="link" href="https://www.roblox.com/users/1706514625/profile">J_minding</a> in 2021.
                         </div>
                 </div>
                 <div id="scriptsContainer" class="container" style="left:200vw;">
